✨ feat: Correcao todos
* ✨ feat: implementa validações de horário e data em BlocoHorario e PeriodoAtividadeQuadro

* ✨ feat: implementação de dados para teste

* ✨ feat: endpoint para copia de quadro horario

* ✨ feat: testes para copiar

* clean todo

* ✨ feat: alterando dia semana para enum

* ✨feat: correção da paginação

* ✨feat: reorganizando models

* ✨feat: corrigindo mappers